wrapped the plot inside a div to fix a resizing n3-line-chart bug

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -37,3 +37,13 @@
     color: #000;
     padding: 0.2em 0;
 }
+
+
+/*this defines the max height for the plots
+* It is necessary because n3-line-chart has a bug
+and, if the plot is not put inside a <div> with fixed
+height, when the browser is resized the plot grows in height
+*/
+.plot_container {
+     height: 400px;
+}
